# speech-emotion-recognition

./: README.md  app.py  requirements.txt
demo-apps/emo_tuning/: README.md
demo-apps/emo_tuning/backend/: .gitignore  README.md  ds_v6_new_merged__df_dataset_audio_chunks__20260625_2045.parquet  main.py  pyproject.toml  test_backend.py
demo-apps/emo_tuning/frontend/: .env.production  README.md  index.html  package-lock.json
demo-apps/emo_tuning/frontend/src/: App.jsx  index.css
demo-apps/hf_space/: README.md  app.py
nbs/: 00_core.ipynb  01_test_utils.ipynb
shared-dataset-loader/: README.md
shared-dataset-loader/nbdev-upc-aidl-iemocap-datasets/src/nbdev_upc_aidl_iemocap_datasets/: test_utils.py
src/nbdev_upc_aidl_iemocap_datasets/: _modidx.py  core.py
train-cli/: .gitignore  README.md  pyproject.toml  train.py
train-cli/models/: cnn_rnn.py  efficientnet.py  gemma_audio.py  simple_cnn.py  transcript_only.py  utils.py  wavlm.py
